# flatscanner

./: .env.example  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/claude/prompts/: pr-fix.md  (+1 more)
.github/workflows/: ai-review.yml  ci.yml  claude-fix-pr.yml  pr-guard.yml
app/: __init__.py  bot.py  config.py  main.py
app/db/: __init__.py  models.py  session.py
app/handlers/: __init__.py  analyze.py  feedback.py  register.py  start.py
app/services/: __init__.py  ai.py  parser.py  payments.py  storage.py
app/utils/: logger.py
docs/: README.md  ai-pr-workflow.md  claude-pr-playbook.md  claude-worker-orchestration.md
docs/adr/: 002-ai-development-workflow.md  003-local-claude-worker-orchestration.md
scripts/: codex-review-adapter-template.ps1  run-ai-pr-review.ps1  run-claude-pr-fix.ps1  run-claude-pr-review.ps1  run-codex-pr-review.ps1  set-required-ai-review-check.ps1  setup-self-hosted-runner.ps1  test-ai-reviewer-selection.ps1  test-claude-cli-no-tools.ps1
specs/001-telegram-listing-analysis-mvp/: tasks.md
specs/002-ai-pr-workflow/: plan.md  spec.md  tasks.md
specs/003-local-claude-worker-orchestration/: plan.md  spec.md
specs/004-switchable-ai-reviewer/: plan.md  spec.md  tasks.md
src/app/: __init__.py  config.py  main.py
src/domain/: listing.py
src/storage/: models.py
src/telegram/: dispatcher.py  models.py  router.py  sender.py
tests/: __init__.py  conftest.py  test_app_bootstrap.py  test_domain_listing.py  test_storage_models.py  test_telegram_routing.py
(+5 files in other folders)
